src/test/ui/issues/issue-16939.stderr
error[E0308]: arguments to this function are incorrect
  --> $DIR/issue-16939.rs:5:9
   |
LL |     |t| f(t);
   |         ^^-^
   |           |
   |           argument unexpected
   |
help: remove the extra argument
   |
LL |     |t| ();
   |         ^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
